deploy/overlays/latest/statefulset-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: statefulset
  labels:
    tier: mariadb
spec:
  serviceName: "mariadb"
  selector:
    matchLabels:
      tier: mariadb
  template:
    metadata:
      labels:
        tier: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb
