deploy/overlays/latest/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        - latest--scheduler-api.ltc.bcit.ca
      secretName: star-ltc-bcit-ca
  rules:
    - host: latest--scheduler-api.ltc.bcit.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scheduler-api-service
                port:
                  number: 80
